--- a/package.json
+++ b/package.json
@@ -1,19 +1,30 @@
 {
   "name": "aly-extensions",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "build": "node build.mjs",
     "dev": "node build.mjs --watch",
-    "repo": "node repo.mjs"
+    "clean": "node build.mjs --clean",
+    "repo": "node repo.mjs",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
+    "lint:report": "eslint --output-file eslint_report.json --format json src",
+    "typecheck": "tsc --noEmit",
+    "check": "pnpm run lint && pnpm run typecheck"
   },
   "devDependencies": {
-    "@electron/asar": "^3.2.8",
+    "@electron/asar": "^3.4.1",
+    "@moonlight-mod/esbuild-config": "^1.0.0",
+    "@moonlight-mod/eslint-config": "github:moonlight-mod/eslint-config",
     "@types/katex": "^0.16.7",
-    "esbuild": "^0.19.3",
-    "esbuild-copy-static-files": "^0.1.0"
+    "esbuild": "^0.19.12",
+    "eslint": "^9.25.1",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@moonlight-mod/types": "^1.2.0",
-    "katex": "^0.16.11"
+    "@moonlight-mod/types": "^1.3.17",
+    "katex": "^0.16.22"
   }
 }
