Fix repo building

--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "node build.mjs",
-    "dev": "node build.mjs --watch",
-    "clean": "node build.mjs --clean",
-    "repo": "node repo.mjs",
-    "lint": "eslint src",
-    "lint:fix": "eslint src --fix",
-    "lint:report": "eslint --output-file eslint_report.json --format json src",
+    "build": "node build.ts",
+    "dev": "node build.ts --watch",
+    "clean": "node build.ts --clean",
+    "repo": "node repo.ts",
+    "lint": "eslint build.ts repo.ts src",
+    "lint:fix": "eslint build.ts repo.ts src --fix",
+    "lint:report": "eslint --output-file eslint_report.json --format json build.ts repo.ts src",
     "typecheck": "tsc --noEmit",
     "check": "pnpm run lint && pnpm run typecheck"
   },
@@ -18,6 +18,7 @@
     "@moonlight-mod/esbuild-config": "^1.0.0",
     "@moonlight-mod/eslint-config": "github:moonlight-mod/eslint-config",
     "@types/katex": "^0.16.7",
+    "@types/node": "^24.2.0",
     "esbuild": "^0.25.8",
     "eslint": "^9.32.0",
     "prettier": "^3.6.2",
